fixed the scroll background issue when cart is open --- new issues is cart container is not wrapping around more items. Possibliy of fix (display issues)

--- a/styles/Navbar.css
+++ b/styles/Navbar.css
@@ -1,6 +1,7 @@
 
 .navbar-container{
     display: flex;
+    height: max-content;
     justify-content: space-between;
     position: sticky;
     background-color: #000000;
@@ -20,6 +21,8 @@
 .navbar-container{
   max-width: none;
 }
+
+
 
   .disable-scroll  {
     overscroll-behavior: hidden;
@@ -88,22 +91,39 @@
     background-color: rgb(255, 255, 255);
     float: right;
     padding: 40px 0px;
-    position: relative;
     overflow:auto;
     z-index: 1100;    
   }
 
+
+  .main-container{
+    max-width: 1400px; 
+    margin: auto;
+    width: 100%;
+  }
+
+  .layout {
+    padding: 0;
+  }
+
   .cart-wrapper{
     width: 100%;
-    height: fit-content;
-    min-height: 100vh;
-    background: rgba(0, 0, 0, 0.171);
+    background: rgba(255, 0, 0, 0.467);
     position: absolute;
     right: 0;
+    left: 0;
     top: 0;
     z-index: 1000;
     /* will-change: transform; */
     transition: all 1s ease-in-out;
+    padding: 0;
+    margin: 0;
+    overflow: scroll;
+    height: 100vh;
+  }
+
+  .main-container{
+    padding: 0;
   }
 
   .cart-heading{
@@ -228,7 +248,9 @@ color: rgb(255, 0, 0);
   width: 100vw;
 padding: 4px;
 z-index: 1000;
-min-height: 90vh;
+min-height: 100vh;
+overflow-y: scroll;
+height: fit-content;
 position: absolute;
 z-index: 11100 !important;
 }
@@ -238,6 +260,7 @@ z-index: 11100 !important;
 }
 .product-containerz{
   margin-top: 10px;
+  background-color: yellow;
 }
 
 
@@ -245,7 +268,7 @@ z-index: 11100 !important;
 .cart-product-image{
   background-color: #ffffff;
   width: 100%;
-  max-width: 280px;
+  max-width: 180px;
 }
 
 
@@ -279,3 +302,5 @@ padding: 30px;
 font-size: 20px;
 }
 }
+
+
